syntax = "proto3";

package WeatherForecast.Grpc.V1;

message WeatherForecastCount {
  int32 count = 1;
}